[project]
name = "aoai-proxy"
version = "0.1.1"
description = "OpenAI-compatible proxy for Azure OpenAI using Entra ID authentication"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Rio Fujita", email = "rio_github@rio.st" }
]
license = { text = "MIT" }

dependencies = [
    "azure-identity>=1.17.1",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-cov>=7",
]

[project.scripts]
aoai-proxy = "aoai_proxy.main:main"

[project.urls]
Homepage = "https://github.com/rioriost/aoai_proxy"
Issues = "https://github.com/rioriost/aoai_proxy/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
