[project]
name = "aoai_proxy"
version = "0.1.4"
description = "OpenAI-compatible proxy for Azure OpenAI using Entra ID authentication"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
authors = [
    { name = "Rio Fujita", email = "rio_github@rio.st" }
]
license = { file = "LICENSE" }

dependencies = [
    "azure-identity>=1.17.1",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
test = [
    "pytest>=9",
    "pytest-cov>=7",
]

[project.scripts]
aoai_proxy = "aoai_proxy.main:main"

[project.urls]
Homepage = "https://github.com/rioriost/aoai_proxy"
Issues = "https://github.com/rioriost/aoai_proxy/issues"
Repository = "https://github.com/rioriost/aoai_proxy"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "build>=1.2.2",
    "twine>=6.1.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aoai_proxy"]

[tool.hatch.build.targets.sdist]
include = [
  "src/aoai_proxy",
  "README.md",
  "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
